style: fix header z-index to prevent logo overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ div::-webkit-scrollbar {
   } */
 
 .header.fixed {
-  z-index: 1;
+  z-index: 999;
   position: sticky;
 }
 
@@ -264,7 +264,7 @@ div::-webkit-scrollbar {
   .logo-bottom {
     margin-top: 60px;
     position: relative;
-    z-index: 10;
+    z-index: 5;
   }
 }
 
